# boost_geometry_util-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/boost_geometry_util/geometries/: box.hpp  geometries.hpp  linestring.hpp  point.hpp  polygon.hpp
rpm/: ros-humble-boost-geometry-util.spec  ros-iron-boost-geometry-util.spec  ros-jazzy-boost-geometry-util.spec  ros-kilted-boost-geometry-util.spec  ros-lyrical-boost-geometry-util.spec  ros-rolling-boost-geometry-util.spec  template.spec
src/geometries/: box.cpp  linestring.cpp  point.cpp  polygon.cpp
test/src/: test.cpp
