<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boost_geometry_util</name>
  <version>0.0.1</version>
  <description>Utility library for boost geometry</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
